syntax = "proto3";

package chronist.records;

enum SourceType {
  UNKNOWN_TYPE  = 0;
  TELEGRAM      = 1;
  TWITTER       = 2;
  WEB           = 3;
  YOUTUBE       = 4;
}

enum FetchStatus {
  UNKNOWN_STATUS = 0;
  FAIL           = 1;
  IN_PROGRESS    = 2;
  SUCCESS        = 3;
}

message File {
  string file_id = 1;
  string file_url = 2;
}

message Source {
  string sender_id = 1;
  string channel_id = 2;
  string message_id = 3;
  string url = 4;
  SourceType type = 5;
}

message Record {
  Source source = 3;
  Source parent = 4;
  string text_content = 5;
  bytes raw_content = 9;
  int64 time = 6;
  repeated File files = 7;
  repeated string links = 8;
}

message UserMetadata {
  string id = 1;
  string username = 2;
  repeated string quotes = 3;
}

message RecordSet {
  string id = 1;
  Request request = 2;
  repeated Record records = 3;
  repeated UserMetadata userMetadata = 4;
}

message RecordListResponse {

  message RecordSetInfo {
    string id = 1;
    string description = 2;
    int32 record_count = 3;

    Record root_record = 4;
  }
  repeated RecordSetInfo record_sets = 1;
  repeated UserMetadata user_metadata = 2;
}

message Request {
  Source source = 1;
  Source parent = 2;
}

message Response {
  Source source = 1;
  string content = 2;
}
